2003-01-20  Alex Duggan  <aldug@astrolinux.com>

	* moduleinfo.py (gnome22.libwnck), (gnome22.gnome-terminal):
	use the gnome-2-2 branch

2003-01-19  Havoc Pennington  <hp@redhat.com>

	* moduleinfo.py: add support for gnomechat

2003-01-13  Johan Dahlin  <jdahlin@async.com.br>

        * moduleinfo.py: Update URL for fontconfig

2003-01-12  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome22.glimmer): require libgnomeprint 2.2 now.

	* vbs-head.jhbuildrc: similar changes here.

	* sample.jhbuildrc: update sample config file for gnome22, and
	only build 'meta-gnome-desktop' by default, rather than 'all'.

	* module.py (Tarball.do_patch): if nobuild is set, go to
	STATE_DONE on completion, rather than STATE_CONFIGURE.

2003-01-10  Alex Duggan  <aldug@gnome.org>

	* moduleinfo.py (gnome22.gnome-panel): get gnome-2-2 branch
	
2003-01-03  Paolo Maggi  <maggi@athena.polito.it>

	* moduleinfo.py (gnome20.gedit): get gnome-2-0 branch. Added 
	gedit to meta-gnome-desktop
	(gnome22): added gedit module. Added gedit to meta-gnome-desktop

2002-12-24  Murray Cumming  <murrayc@usa.net>

	* moduleinfo.py (gnome22): Replaced the gnome22 gnome-meta-desktop
	metamodule with one that includes the new modules such as acme, 
	file-roller, gstreamer, and nautilus-media.

2002-12-24  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (gnome22.fcpackage): add fcpackage to gnome22
	module set.
	(gnome22.pango): depend on fcpackage.

	* module.py (FcPackage): add a special Package subclass for
	building fcpackage.

	* jhbuild.py (do_build): change the code that removes entries from
	the module list so that it doesn't cause an exception if you
	specify a module name that won't be built.

2002-12-23  James Henstridge  <james@daa.com.au>

	* bootstrap.py (bootstraps): add my libtool -export-dynamic patch.

2002-12-23    <chema@celorio.com>

	* moduleinfo.py (gnome22): add intltool dependency to
	libgnomeprint

2002-12-22  Murray Cumming  <murrayc@usa.net>
