@@ -1,3 +1,8 @@
+2003-01-21  Murray Cumming  <murrayc@usa.net>
+
+	* moduleinfo.py (gnome22): Use gnome 2.2 branches for glib, pango,
+	gtk+, and atk+.
+
 2003-01-20  Alex Duggan  <aldug@astrolinux.com>
 
 	* moduleinfo.py (gnome22.libwnck), (gnome22.gnome-terminal):
